--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="av">
 <head>
     <meta charset="UTF-8">
     <title>Angular Visualization</title>
     <link rel="stylesheet" href="dist/css/dist-av1.css">
 </head>
-<body>
-<div class="hello-app">this is the angular visualization application</div>
+<body ng-controller="FirstController as firstController">
+<div ng-bind="firstController.testField"></div>
+
+<script src="bower_components/angular/angular.js"></script>
+<script src="bower_components/angular-route/angular-route.js"></script>
+<script src="dist/js/dist-av.js"></script>
 </body>
 </html>
