--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Angular Visualization</title>
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="dist/css/dist-av1.css">
 </head>
-<body ng-controller="MainController as mainController">
+<body class="container-fluid" ng-controller="AppController as appController">
 
 <div ng-include="'src/views/header.html'"></div>
 
-<ul>
-    <li ng-repeat="link in mainController.links">
-        <a ng-href="{{'#/' + link}}" ng-bind="link"></a>
-    </li>
-</ul>
+<div ng-include="'src/views/left-menu.html'"></div>
 
 <div class="content">
     <div ng-view></div>
 </div>
 
+<script src="bower_components/jquery/dist/jquery.js"></script>
+<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/angular-route/angular-route.js"></script>
 <script src="dist/js/dist-av.js"></script>
