left menu, logo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="dist/css/dist-av1.css">
 </head>
-<body class="container-fluid" ng-controller="AppController as appController">
+<body class="container-fluid av-body" ng-controller="AppController as appController">
 
 <div ng-include="'src/views/header.html'"></div>
 
