--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/angular-route/angular-route.js"></script>
 <script src="bower_components/d3/d3.js"></script>
+<script src="src/js/plugins/colorbrewer/colorbrewer.js"></script>
 <script src="bower_components/crossfilter/crossfilter.js"></script>
 <script src="bower_components/dcjs/dc.js"></script>
 <script src="dist/js/dist-av.js"></script>
